@@ -7,7 +7,7 @@
  *      implementation of the pqxx::Transaction class.
  *   pqxx::Transaction represents a database transaction
  *
- * Copyright (c) 2001-2002, Jeroen T. Vermeulen <jtv@xs4all.nl>
+ * Copyright (c) 2001-2003, Jeroen T. Vermeulen <jtv@xs4all.nl>
  *
  *-------------------------------------------------------------------------
  */
